@@ -1,0 +1,4 @@
+EASetup.exe
+fifapc.ico
+fifaosdkz.dll
+fifaosdkz.pdb
