@@ -1,0 +1,16 @@
+#-------------------------------------------------
+#
+# Project created by QtCreator 2010-04-13T18:56:38
+#
+#-------------------------------------------------
+
+TARGET = wgedit
+TEMPLATE = app
+
+
+SOURCES += main.cpp\
+        mainwindow.cpp
+
+HEADERS  += mainwindow.h
+
+FORMS    += mainwindow.ui
