@@ -5,3 +5,4 @@ r3:new download method: QNetworkAcessManager instead of wget
 r4:engine fixes, saving window geometry improved
 r5:adding .desktop files to Desktop folder (see EXEPATH), opening CD/DVD ISO images improved. 
 r6:engine fixes, VIDEO_MEMORY_SIZE added
+r7:engine fixes, using INI format for control file, presets
